dist_pixmaps_DATA = \
    tutorial-slide-4.png \
    side-splash.png \
    avatar-a.png \
    avatar-b.png \
    avatar-c.png \
    avatar-d.png \
    avatar-e.png \
    avatar-f.png \
    avatar-g.png \
    avatar-h.png \
    avatar-i.png \
    avatar-j.png \
    avatar-k.png \
    about.png

pixmapsdir = $(pkgdatadir)/pixmaps/

MAINTAINERCLEANFILES = \
	Makefile.in
