dist_plugins_DATA = \
    bitbucket.xml \
    github.xml \
    gitorious.xml \
    gnome.xml \
    ssnet.xml \
    own-server.xml \
    github.png \
    gitorious.png \
    bitbucket.png \
    gnome.png \
    ssnet.png \
    own-server.png

pluginsdir = $(pkgdatadir)/plugins/

MAINTAINERCLEANFILES = \
	Makefile.in
