dist_presets_DATA = \
    bitbucket.xml \
    github.xml \
    gitlab.xml \
    own-server.xml \
    planio.xml \
    subversion.xml \
    github.png \
    gitlab.png \
    bitbucket.png \
    planio.png \
    subversion.png \
    own-server.png

presetsdir = $(pkgdatadir)/presets/

MAINTAINERCLEANFILES = \
	Makefile.in
