# Github
preset_files = ['github.xml', 'github.png', 'github-logo.png']

# GitLab
preset_files += ['gitlab.xml', 'gitlab.png', 'gitlab-logo.png']

# Bitbucket
preset_files += ['bitbucket.xml', 'bitbucket.png']

# Planio
preset_files += ['planio.xml', 'planio.png', 'planio-logo.png']

# Other
preset_files += ['own-server.xml', 'own-server.png']


install_data(
    sources: preset_files,
    install_dir: join_paths(install_dir, 'presets'))

